# pyctd

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
checktestdata/: __init__.py  __version__.py  lib.py  parser.py  pyctd.py  tokenizer.py
doc/: introduction.md  regex.md
test/: additional_tests.sh  diff_tests.sh  grammar_tests.sh  strict_tests.sh
test/additional/: test_array_prog.err1  test_array_prog.err2  test_div_data.in  test_div_prog.in  test_empty_string_prog.in  test_empty_string_prog.in2  test_encoding2_prog.in  test_float2_data.err1  test_float2_data.err5  test_float2_data.in2  test_float2_prog.in  test_grammar_prog.err1  test_index_prog.in  test_inf_prog.in  test_int2_prog.in  test_int_prog.err1  test_int_prog.err2  test_int_prog.in  test_mod_data.in  test_mod_prog.in  test_precedence_prog.in  test_regex4_prog.in  test_regex_prog.in  test_unique_prog.err1  test_unique_prog.err3
test/grammar/: test_regex2_prog  test_regex3_prog  test_regex_prog
test/strict/: test_eof_prog.err  test_float2_data.err3  test_float2_data.in3  test_float2_data.in4  test_inarray_prog.in  test_index2_prog.err1  test_index2_prog.err2  test_index2_prog.in  test_int2_prog.in  test_math1_prog.in  test_math2_prog.in  test_regex2_data.in  test_regex2_prog.in  test_regex3_prog.in  test_set_prog.err1  test_set_prog.in  test_unique_prog.in
